--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/express": "^4.17.13",
     "@types/express-promise-router": "^3.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0"
