--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "create:migration": "npx mikro-orm migration:create --initial",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "^17.0.23"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
