--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
+    "build": "tsc",
     "start": "node dist/index.js",
     "create:migration": "npx mikro-orm migration:create --initial",
     "test": "echo \"Error: no test specified\" && exit 1"
